@@ -2,6 +2,8 @@
 
 	* config/delegates.mgk.in: Gnuplot files are inherently insecure.
 	Remove delegates support for reading them.
+	Added -dSAFER to Ghostscript invokations in delegates.mgk for more
+	secure execution.
 
 	* magick/constitute.c (ReadImages): Avoid possible infinite
 	ReadImage() recursion.
